# Py_Web2

./: Dockerfile  pyproject.toml  requirements.txt  setup.py
Assistant/: start_page.py
