[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "assistant"
authors = ["OleksanderLapin <133327757+OleksanderLapin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Faker = "18.13.0"
prettytable = "3.8.0"
prompt-toolkit = "3.0.39"
python-dateutil = "2.8.2"
six = "1.16.0"
termcolor = "2.3.0"
transliterate = "1.10.2"
wcwidth = "0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
